--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             
             <div class="score-card">
-                <h3 class="visiting-team">GUEST</h3>
+                <h3 class="visiting-team">AWAY</h3>
                 <p class="team-score" id="guest">0</p>
                 <div class="score-buttons">
                     <button class="score-1" onclick="guest_1()">+1</button>
